# coq

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES  CHANGES.md  INSTALL  META.coq.in  Makefile  Makefile.build  Makefile.common  Makefile.doc  Makefile.ide  configure.ml  default.nix  shell.nix
API/: API.mli
checker/: analyze.ml  analyze.mli  dune  mod_checking.ml  validate.ml  values.ml  values.mli  votour.ml
dev/: top_printers.ml  top_printers.mli  vm_printers.ml
engine/: eConstr.ml  eConstr.mli  namegen.ml  termops.ml
ide/: coqide.ml  coqide_ui.ml  dune  preferences.ml  preferences.mli  wg_ScriptView.ml
interp/: constrextern.ml  constrintern.ml  declare.ml  declare.mli  dumpglob.ml  dumpglob.mli  impargs.ml  notation.ml  notation.mli  notation_ops.ml  notation_term.ml
intf/: vernacexpr.ml
kernel/: cClosure.ml  cClosure.mli  cPrimitives.ml  cPrimitives.mli  cbytecodes.ml  cbytecodes.mli  cbytegen.ml  cemitcodes.ml  cemitcodes.mli  clambda.ml  clambda.mli  constr.ml  constr.mli  cooking.ml  cooking.mli  csymtable.ml  declarations.ml  declareops.ml  declareops.mli  dune  entries.ml  environ.ml  environ.mli  indtypes.ml  inductive.ml  kernel.mllib  mod_subst.ml  mod_subst.mli  mod_typing.ml  modops.ml  modops.mli  names.ml  names.mli  nativecode.ml  nativelambda.ml  nativelambda.mli  nativevalues.ml  nativevalues.mli  reduction.ml  retroknowledge.ml  (+17 more)
kernel/byterun/: coq_interp.c  coq_uint63_emul.h  coq_uint63_native.h  coq_values.h
lib/: flags.ml  flags.mli
parsing/: g_proofs.ml4  g_vernac.ml4  pcoq.mli
pretyping/: cbv.ml  cbv.mli  classops.ml  (+28 more)
(+207 files in other folders)
